--- a/src/EHRSystem.Web/Views/Account/Login.cshtml
+++ b/src/EHRSystem.Web/Views/Account/Login.cshtml
@@ -37,7 +37,16 @@
                             <i class="bi bi-box-arrow-in-right me-2"></i>
                             Sign In
                         </button>
+                        <div class="form-group">
+    <p>
+        <a asp-action="Register" asp-route-returnUrl="@ViewContext.HttpContext.Request.Query["returnUrl"]">Register as new user</a>
+    </p>
+    <p>
+        <a asp-action="ForgotPassword">Forgot your password?</a>
+    </p>
+</div>
                     </form>
+                    
                 </div>
             </div>
         </div>
