--- a/src/EHRSystem.Web/Views/Account/Register.cshtml
+++ b/src/EHRSystem.Web/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Register</h2>
 
-<form asp-action="Register" method="post">
+<form asp-controller="Account" asp-action="Register" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     
     <div class="form-group">
@@ -14,13 +14,13 @@
     
     <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
+        <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     
     <div class="form-group">
         <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" class="form-control" />
+        <input asp-for="ConfirmPassword" type="password" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
     
@@ -36,5 +36,15 @@
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
     
+    <div class="form-group">
+        <label asp-for="Role"></label>
+        <select asp-for="Role" asp-items="Model.RoleOptions" class="form-control"></select>
+        <span asp-validation-for="Role" class="text-danger"></span>
+    </div>
+    
     <button type="submit" class="btn btn-primary">Register</button>
-</form> 
+</form>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+} 
