--- a/src/EHRSystem.Web/Views/Home/Index.cshtml
+++ b/src/EHRSystem.Web/Views/Home/Index.cshtml
@@ -2,4 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Welcome to EHR System</h1> 
+<div class="text-center d-flex align-items-center justify-content-center" style="height: 80vh;">
+    <h1 class="display-4">Welcome to EHR System</h1>
+</div> 
