--- a/src/EHRSystem.Web/Views/Shared/_Layout.cshtml
+++ b/src/EHRSystem.Web/Views/Shared/_Layout.cshtml
@@ -31,22 +31,31 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="AdminPanel">Admin Panel</a>
+                                <a class="nav-link" asp-controller="Account" asp-action="AdminPanel">Admin Panel</a>
+                            </li>
+                        }
+                        @if (User.IsInRole("Doctor") || User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Patient" asp-action="Search">Patient Search</a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Profile">Profile</a>
+                            <a class="nav-link" asp-controller="Account" asp-action="Profile">Profile</a>
                         </li>
                         <li class="nav-item">
                             <form asp-controller="Account" asp-action="Logout" method="post">
-                                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                                <button type="submit" class="nav-link btn btn-link">Logout</button>
                             </form>
                         </li>
                     }
                     else
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+                            <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Account" asp-action="Register">Register</a>
                         </li>
                     }
                 </ul>
