--- a/src/EHRSystem.Web/Views/_ViewImports.cshtml
+++ b/src/EHRSystem.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EHRSystem.Web
-@using EHRSystem.Web.Models
+@using EHRSystem.Core.Models
+@using EHRSystem.Core.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
