--- a/src/EHRSystem.Web/Views/_ViewImports.cshtml
+++ b/src/EHRSystem.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EHRSystem.Web
 @using EHRSystem.Core.Models
 @using EHRSystem.Core.ViewModels
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
